* Add exception handling from the server. * Remove commands that are no longer used. * Wrap state transitions in try/except to expose the client to various   state machine exceptions

--- a/text/static/text/css/text.css
+++ b/text/static/text/css/text.css
@@ -27,6 +27,14 @@
     grid-template-columns: 50% 50%;
 }
 
+.exception {
+    grid-column: 2;
+    display: grid;
+    font-size: 20px;
+    font-style: italic;
+    color: #bf2639;
+}
+
 .nav > div {
     display: inline-block;
 
